cluster/infrastructure/longhorn/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn
  namespace: longhorn-system
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - "longhorn.${domain_name}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: authentik-forward-auth
            namespace: traefik
      backendRefs:
        - name: longhorn-frontend
          port: 80
