cluster/infrastructure/longhorn/app/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn
  namespace: longhorn-system
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`longhorn.${domain_name}`) && PathPrefix(`/`)
      services:
        - kind: Service
          name: longhorn-frontend
          namespace: longhorn-system
          port: 80
      middlewares:
        - name: ak-outpost-proxy-outpost
          namespace: authentik
