cluster/infrastructure/longhorn/app/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: longhorn
  namespace: longhorn-system
spec:
  hosts:
    - longhorn.${domain_name}
  gateways:
    - istio-system/istio-ingressgateway
  http:
    - route:
        - destination:
            host: longhorn-frontend.longhorn-system.svc.cluster.local
            port:
              number: 80
      headers:
        request:
          set:
            X-Forwarded-Proto: "https"
            X-Forwarded-Host: "longhorn.${domain_name}"
            X-Forwarded-Port: "443"
      match:
        - authority:
            exact: longhorn.${domain_name}
          uri:
            prefix: /
